Adjust job for JDK 11 to not require module java.xml.bind any more
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1838702 13f79535-47bb-0310-9956-ffa450edef68